# palindroam

./: .gitignore  Justfile  gen_backlinks.py  typ_to_html.lua
app/: package.json  pnpm-lock.yaml
app/src/: app.css
app/src/lib/: note.ts
app/src/routes/: +layout.svelte
app/src/routes/embed/[...notePath]/: +server.ts
app/src/routes/embed/[noteID]/: +server.ts
app/src/routes/note/[...notePath]/: +page.server.ts  +page.svelte  Tooltip.svelte
app/src/routes/note/[noteID]/: +page.server.ts  +page.svelte  Tooltip.svelte  fetchnote.ts
rust/: .gitignore  Cargo.toml  Justfile
rust/src/: backlinks.rs  main.rs
